--- a/src/app/orders/print-contract/print-contract.component.html
+++ b/src/app/orders/print-contract/print-contract.component.html
@@ -1,5 +1,6 @@
-<div class="header">
-    <h2 class="text-center">INSTRUMENTO PARTICULAR DE CONTRATO DE LOCAÇÃO</h2>
+<div class="header" class="text-center">
+    <img src="../assets/img/damiipratii-logo-primary.png" width="220" alt="">
+    <h2>INSTRUMENTO PARTICULAR DE CONTRATO DE LOCAÇÃO</h2>
 </div>
 <div class="content" *ngIf="order">
     <h4>IDENTIFICAÇÃO DAS PARTES</h4>
