feat(graph): Add dashboard goals graph

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -126,12 +126,11 @@
         <div class="col-md-12">
             <div class="card">
                 <div class="header">
-                    <h4 class="title">Visão Geral das Ordens de Locação</h4>
-                    <p class="category">Por situação atual</p>
+                    <h4 class="title">Visão Geral das Metas</h4>
+                    <p class="category">Previsto Vs. Efetivado</p>
                 </div>
                 <div class="content">
-                    <!-- <div id="chartPreferences" class="ct-chart ct-perfect-fourth"></div> -->
-                    preparando gráfico...
+                    <div id="chartActivity" class="ct-chart ct-perfect-fourth"></div>
                     <div class="footer">
                         <hr>
                         <div class="stats">
